--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,25 @@
         </div>
     </div>
 
+    <div class="ejercicio2">
+        <div class="container">
+            <div class="my-card card">
+                <label for="">Ejercicio 2</label>
+                <div class="card-body">
+                    <div class="form-inline">
+                        <label for="">Edad de la persona</label>
+                        <input type="text" class="form-control" id="Edad">
+                        <div class="inline-table my-btn">
+                            <button class="btn btn-dark" onclick="main()">Calcular  Edad</button>
+                        </div>
+                        <div>
+                            <h5 id="ejer2"> -------</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 </body>
 
@@ -67,5 +86,47 @@
 
     function add(n1, n2) {
         return n1 + n2;
+    }
+    /*Ejercicio 2 edades*/
+    const edad = document.getElementById("Edad");
+    const message = document.getElementById("ejer2");
+
+    function main() {
+
+        const age = parseInt(edad.value);
+
+        if (!age) {
+            error();
+        } else {
+            evaluate(age);
+        }
+    }
+
+    function error() {
+
+        message.innerHTML = "Ingrese datos validos";
+        message.classList.add("text-danger");
+    }
+
+    function evaluate(edad) {
+
+        if (edad < 18) {
+            menor(edad);
+        } else {
+            mayor(edad);
+        }
+    }
+
+    function mayor(edad) {
+        message.classList.remove("text-danger");
+        message.innerHTML = ` ${edad},  años es mayor de edad`;
+        message.classList.add("text-success");
+    }
+
+    function menor(edad) {
+        message.classList.remove("text-danger");
+        message.innerHTML = ` ${edad}, años es menor de edad`;
+        message.classList.add("text-info");
+
     }
 </script>
