--- a/src/index.html
+++ b/src/index.html
@@ -51,6 +51,24 @@
             </div>
         </div>
     </div>
+    <div class="ejercicio3">
+        <div class="my-card card">
+            <label for="">Ejercicio 3</label>
+            <div class="card-body">
+                <div class="form-inline">
+                    <label for=""> Numero</label>
+                    <input type="text" class="form-control" id="number">
+                    <div class="form-inline">
+                        <button class="btn btn-primary" onclick="show()">Calcular</button>
+                    </div>
+                    <div>
+
+                        <h5 id="ejer3" class=""> ------- </h5>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 </body>
 
@@ -127,6 +145,37 @@
         message.classList.remove("text-danger");
         message.innerHTML = ` ${edad}, años es menor de edad`;
         message.classList.add("text-info");
+
+    }
+    /*Ejercicio 3 , impares y pares*/
+
+    const par = document.getElementById("number");
+    const resultado = document.getElementById("ejer3");
+
+    function show() {
+        const n = parseInt(par.value);
+        if (!n) {
+            ejer3.innerHTML = `ingrese un dato valido`;
+        } else {
+            operation(n);
+        }
+    }
+
+    function operation(n) {
+
+        if (n % 2) {
+            impar(n)
+        } else {
+            par1(n);
+        }
+    }
+
+    function par1(n) {
+        ejer3.innerHTML = `El numero ${n} es par`;
+    }
+
+    function impar(n) {
+        ejer3.innerHTML = `El numero ${n} es impar`;
 
     }
 </script>
