--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
                 </div>
                 <div>
                     <span>Resultado : </span>
-                    <h5 id="resultado" class=""> ------- </h5>
+                    <h5 id="result" class=""> ------- </h5>
                 </div>
             </div>
         </div>
@@ -59,7 +59,7 @@
                     <label for=""> Numero</label>
                     <input type="text" class="form-control" id="number">
                     <div class="form-inline">
-                        <button class="btn btn-primary" onclick="show()">Calcular</button>
+                        <button class="btn btn-primary" onclick="show()">Operacion</button>
                     </div>
                     <div>
 
@@ -70,13 +70,38 @@
         </div>
     </div>
 
+    <div class="ejercicio4">
+
+        <div class="container">
+            <label for="">Ejercicio 4</label>
+            <div class="card">
+                <div class="form-inline">
+                    <button class="btn btn-success" onclick="calcular()"> Calcular</button>
+
+                </div>
+
+                <label for="">Numero 1</label>
+                <input type="text" class="form-control" id="num1">
+
+                <div class="form-inline">
+                    <label for="">Numero 2</label>
+                    <input type="text" class="form-control" id="num2">
+                </div>
+                <div class="form-inline">
+                    <label for="">Numero 3</label>
+                    <input type="text" class="form-control" id="num3">
+                </div>
+                <h5 id="resultado1" class="">-------</h5>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
 <script>
     const inputNumberOne = document.getElementById("numberOne");
     const inputNumberTwo = document.getElementById("numberTwo");
-    const h5Result = document.getElementById("resultado");
+    const h5Result = document.getElementById("result");
 
     function calculate() {
         const n1 = parseInt(inputNumberOne.value);
@@ -176,6 +201,57 @@
 
     function impar(n) {
         ejer3.innerHTML = `El numero ${n} es impar`;
+
+    }
+    /*ejercicio4*/
+    const number1 = document.getElementById("num1");
+    const number2 = document.getElementById("num2");
+    const number3 = document.getElementById("num3");
+    const resultado1 = document.getElementById("resultado1");
+
+    function calcular() {
+        const n1 = parseInt(number1.value);
+        const n2 = parseInt(number2.value);
+        const n3 = parseInt(number3.value);
+
+        if (!n1 || !n2 || !n3) {
+            validation(n1, n2, n3);
+        } else {
+            Nmayor(n1, n2, n3);
+        }
+    }
+
+    function validation(n1, n2, n3) {
+
+        resultado1.classList.add("text-danger");
+
+        if (!n1) {
+
+            resultado1.innerHTML = "  "
+
+        } else if (!n2) {
+
+            resultado1.innerHTML = "  "
+        } else if (!n3) {
+            resultado1.innerHTML = " "
+        }
+    }
+
+    function Nmayor(n1, n2, n3) {
+
+        resultado1.classList.remove("text-danger");
+
+        let mayor = 0;
+
+        if (n1 > n2 && n1 > n3) {
+            mayor = n1
+        } else if (n2 > n1 && n2 > n3) {
+            mayor = n2
+        } else if (n3 > n1 && n3 > n2) {
+            mayor = n3
+        }
+        resultado1.innerHTML = `Numero mayor es: ${mayor}`;
+        resultado1.classList.add("text-success");
 
     }
 </script>
