--- a/src/index.html
+++ b/src/index.html
@@ -1,406 +1,82 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<title>Obteniendo Json</title>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TalleresJS</title>
-</head>
+<body onload="cargarDatos()">
+    <div id="datosPersona">
+        <label><B>TIENDA DE PRODUCTOS TECNOLOGICOS </B></label>
 
-<body>
-    <div class="container">
+        <table id="Table" border="2"></table>
+        </br>
+        <label>Carrito de Compra </label>
 
-        <div class="my-card card">
-            <label for="">Ejercicio 1</label>
-            <div class="card-body">
-                <div class="form-inline">
-                    <label for=""> Numero 1</label>
-                    <input type="text" class="form-control" id="numberOne">
-                </div>
-                <div class="form-inline">
-                    <label for=""> Numero 2</label>
-                    <input type="text" class="form-control" id="numberTwo">
-                </div>
-                <div class="form-inline">
-                    <button class="btn btn-primary" onclick="calculate()">Calcular</button>
-                </div>
-                <div>
-                    <span>Resultado : </span>
-                    <h5 id="result" class=""> ------- </h5>
-                </div>
-            </div>
-        </div>
+
+        <table id="Carrito" border="2"></table>
+
+        </br>
+        <label>Total Compra <input type="text" id="Compra"  /></label>
     </div>
 
-    <div class="ejercicio2">
-        <div class="container">
-            <div class="my-card card">
-                <label for="">Ejercicio 2</label>
-                <div class="card-body">
-                    <div class="form-inline">
-                        <label for="">Edad de la persona</label>
-                        <input type="text" class="form-control" id="Edad">
-                        <div class="inline-table my-btn">
-                            <button class="btn btn-dark" onclick="main()">Calcular  Edad</button>
-                        </div>
-                        <div>
-                            <h5 id="ejer2"> -------</h5>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="ejercicio3">
-    </div>
-    <div class="my-card card">
-        <div class="card-body">
-            <label for="">Ejercicio 3</label>
-            <div class="form-inline">
-                <label for=""> Numero</label>
-                <input type="text" class="form-control" id="number">
-                <div class="form-inline">
-                    <button class="btn btn-primary" onclick="show()">Calcular</button>
-                </div>
-                <div>
+    <script>
+        var json = {
+            "productos": [{
+                "Id": "1",
+                "tittle": "Play Station 4",
+                "price": 1300000,
+                "store": "Exito",
+                "Img": "https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/PS4-Console-wDS4.jpg/1024px-PS4-Console-wDS4.jpg"
 
-                    <h5 id="ejer3" class=""> ------- </h5>
-                </div>
-            </div>
-        </div>
-    </div>
-    </div>
+            }, {
+                "Id": "1",
+                "tittle": "Piano",
+                "price": 1000000,
+                "store": "Falabella",
+                "Img": "https://img.klaviano.com/files/08-2019/ad415480/large_1565987072611827447.jpg"
 
-    <div class="ejercicio4">
+            }, {
+                "Id": "1",
+                "tittle": "Silla",
+                "price": 800000,
+                "store": "Exito",
+                "Img": "https://images-eu.ssl-images-amazon.com/images/I/41EvBTrRYqL.jpg"
 
-        <div class="container">
-            <div class="card">
-                <label for="">Ejercicio 4</label>
+            }]
+        };
 
-                <div class="form-inline">
-                    <button class="btn btn-success" onclick="calcular()"> Calcular</button>
+        var DatosJson = JSON.parse(JSON.stringify(json));
+        var totalCompra = 0;
 
-                </div>
 
-                <label for="">Numero 1</label>
-                <input type="text" class="form-control" id="num1">
+        function agregarCarrito(i) {
 
-                <div class="form-inline">
-                    <label for="">Numero 2</label>
-                    <input type="text" class="form-control" id="num2">
-                </div>
-                <div class="form-inline">
-                    <label for="">Numero 3</label>
-                    <input type="text" class="form-control" id="num3">
-                </div>
-                <h5 id="resultado1" class="">Resultado </h5>
-            </div>
-        </div>
-    </div>
-    <div class="ejercicio5">
-        <div class="my-card card">
-            <div class="card-body">
-                <label for="">Ejercicio 5</label>
-                <div class="form-inline">
-                    <label for=""> Factorial</label>
-                    <input type="text" class="form-control" id="numb">
-                    <div class="form-inline">
-                        <button class="btn btn-primary" onclick="factorial()">Calcular</button>
-                    </div>
-                </div>
-                <h5 id="result5" class="">Resultado </h5>
-            </div>
-        </div>
-        <div>
-            <div class="ejercicicio6">
+            $("#Carrito").append('<tr>' +
+                '<td align="center" style="dislay: none;">' + DatosJson.productos[i].tittle + '</td>' +
+                '<td align="center" style="dislay: none;">' + DatosJson.productos[i].price + '</td>' + '</tr>');
 
-                <div class="my-card card">
-                    <label for="">Ejercicio 6</label>
-                    <div class="card-body">
-                        <div class="form-inline">
-                            <label for=""> Cantidad Invertir :</label>
-                            <input type="text" class="form-control" id="Cantidad">
-                        </div>
-                        <div class="form-inline">
-                            <label for="">Taza de interes : 0.5</label>
-                        </div>
-                        <div class="form-inline">
-                            <button class="btn btn-primary" onclick="calculate()">Capital total</button>
-                        </div>
-                        <div>
-                            <span>Resultado : </span>
-                            <h5 id="Cresultado" class=""> ------- </h5>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="ejercicio7">
-                <div class="my-card card">
-                    <h3>Ingrese notas entre 1.0 y 10.0 para pasar la materia debe de sacar más de 7.0</h3>
-                    <div class="card-body">
-                        <div class="form-inline">
-                            <div class="form-inline">
-                                <label for=""> Nota 1 :</label>
-                                <input type="text" class="form-control" id="nota1">
-                            </div>
+            totalCompra = totalCompra + DatosJson.productos[i].price
 
-                            <div class="form-inline">
-                                <label for=""> Nota 2 :</label>
-                                <input type="text" class="form-control" id="nota2">
-                            </div>
+            alert("TOTAL DE LA COMPRA:" + totalCompra)
+            $("#Compra").val(totalCompra)
 
-                            <div class="form-inline">
-                                <label for=""> Nota 3 :</label>
-                                <input type="text" class="form-control" id="nota3">
-                            </div>
 
-                        </div>
-                        <button class="btn btn-primary" onclick="notafinal()">Calcular Nota</button>
-                        <div class="form-inline">
-                            <h5 id="prom" class=""> </h5>
-                        </div>
-                        <h5 id="gapi" class="">----</h5>
-                    </div>
-                </div>
-            </div>
+        }
+
+        function cargarDatos() {
+
+            console.log(DatosJson.productos.length);
+
+            for (i = 0; i < DatosJson.productos.length; i++) {
+                var nomPro = DatosJson.productos[i].tittle
+
+                $("#Table").append('<td align="center" style="dislay: none;">' + '<img src="' + DatosJson.productos[i].Img + '" height="300" width="300" ></img></br>' +
+                    DatosJson.productos[i].tittle + '</br>' +
+                    DatosJson.productos[i].price + '</br>' +
+                    DatosJson.productos[i].store +
+                    '</br><button type="button" onclick="agregarCarrito(' + i + ')">Agregar al carrito</button>' + '</td>');
+            }
+        }
+    </script>
+
 </body>
 
 </html>
-<script>
-    const inputNumberOne = document.getElementById("numberOne");
-    const inputNumberTwo = document.getElementById("numberTwo");
-    const h5Result = document.getElementById("result");
-
-    function calculate() {
-        const n1 = parseInt(inputNumberOne.value);
-        const n2 = parseInt(inputNumberTwo.value);
-        if (hasDataAnError(n1, n2)) {
-            onError();
-            return;
-        }
-        onSuccess(n1, n2);
-    }
-
-    function hasDataAnError(n1, n2) {
-        return !n1 || !n2;
-    }
-
-    function onError() {
-        h5Result.innerHTML = "ingrese datos validos";
-        h5Result.classList.add("text-danger");
-    }
-
-    function onSuccess(n1, n2) {
-        h5Result.innerHTML = add(n1, n2);
-        h5Result.classList.remove("text-danger");
-    }
-
-    function add(n1, n2) {
-        return n1 + n2;
-    }
-    /*Ejercicio 2 edades*/
-    const edad = document.getElementById("Edad");
-    const message = document.getElementById("ejer2");
-
-    function main() {
-
-        const age = parseInt(edad.value);
-
-        if (!age) {
-            error();
-        } else {
-            evaluate(age);
-        }
-    }
-
-    function error() {
-
-        message.innerHTML = "Ingrese datos validos";
-        message.classList.add("text-danger");
-    }
-
-    function evaluate(edad) {
-
-        if (edad < 18) {
-            menor(edad);
-        } else {
-            mayor(edad);
-        }
-    }
-
-    function mayor(edad) {
-        message.classList.remove("text-danger");
-        message.innerHTML = ` ${edad},  años es mayor de edad`;
-        message.classList.add("text-success");
-    }
-
-    function menor(edad) {
-        message.classList.remove("text-danger");
-        message.innerHTML = ` ${edad}, años es menor de edad`;
-        message.classList.add("text-info");
-
-    }
-    /*Ejercicio 3 , impares y pares*/
-
-    const par = document.getElementById("number");
-    const resultado = document.getElementById("ejer3");
-
-    function show() {
-        const n = parseInt(par.value);
-        if (!n) {
-            ejer3.innerHTML = `ingrese un dato valido`;
-        } else {
-            operation(n);
-        }
-    }
-
-    function operation(n) {
-
-        if (n % 2) {
-            impar(n)
-        } else {
-            par1(n);
-        }
-    }
-
-    function par1(n) {
-        ejer3.innerHTML = `El numero ${n} es par`;
-    }
-
-    function impar(n) {
-        ejer3.innerHTML = `El numero ${n} es impar`;
-
-    }
-    /*ejercicio4*/
-    const number1 = document.getElementById("num1");
-    const number2 = document.getElementById("num2");
-    const number3 = document.getElementById("num3");
-    const resultado1 = document.getElementById("resultado1");
-
-    function calcular() {
-        const n1 = parseInt(number1.value);
-        const n2 = parseInt(number2.value);
-        const n3 = parseInt(number3.value);
-
-        if (!n1 || !n2 || !n3) {
-            validation(n1, n2, n3);
-        } else {
-            Nmayor(n1, n2, n3);
-        }
-    }
-
-    function validation(n1, n2, n3) {
-
-        resultado1.classList.add("text-danger");
-
-        if (!n1) {
-
-            resultado1.innerHTML = "  "
-
-        } else if (!n2) {
-
-            resultado1.innerHTML = "  "
-        } else if (!n3) {
-            resultado1.innerHTML = " "
-        }
-    }
-
-    function Nmayor(n1, n2, n3) {
-
-        resultado1.classList.remove("text-danger");
-
-        let mayor = 0;
-
-        if (n1 > n2 && n1 > n3) {
-            mayor = n1
-        } else if (n2 > n1 && n2 > n3) {
-            mayor = n2
-        } else if (n3 > n1 && n3 > n2) {
-            mayor = n3
-        }
-        resultado1.innerHTML = `Numero mayor es: ${mayor}`;
-        resultado1.classList.add("text-success");
-    }
-    /*ejercicio5*/
-    const numb = document.getElementById("numb");
-    const resultado5 = document.getElementById("result5 ");
-
-    function factorial() {
-        let nb = parseInt(numb.value)
-        let total = 1;
-        for (i = 1; i <= nb; i++) {
-            total = total * i;
-        }
-        result5.innerHTML = `${total}`;
-    }
-    /*Ejercicio6*/
-    const inputCantidad = document.getElementById("Cantidad");
-    const Cresultado = document.getElementById("Cresultado");
-
-    function calculate() {
-        const CI = parseInt(inputCantidad.value);
-        const TI = 0.5;
-        if (hasDataAnError(CI, TI)) {
-            onError();
-            return;
-        }
-        onSuccess(CI, TI);
-    }
-
-    function hasDataAnError(CI, TI) {
-        return !CI || !TI;
-    }
-
-    function onError() {
-        Cresultado.innerHTML = "ingrese datos validos";
-        Cresultado.classList.add("text-danger");
-    }
-
-    function onSuccess(CI, TI) {
-        Cresultado.innerHTML = add(CI, TI);
-        Cresultado.classList.remove("text-danger");
-    }
-
-    function add(CI, TI) {
-        return CI * TI / 100;
-    }
-    /*Ejercicio7*/
-    const nota1 = document.getElementById("nota1");
-    const nota2 = document.getElementById("nota2");
-    const nota3 = document.getElementById("nota3");
-    const promedio = document.getElementById("prom");
-    const ganapierde = document.getElementById("gapi");
-
-
-
-    function notafinal() {
-        const n1 = parseInt(nota1.value);
-        const n2 = parseInt(nota2.value);
-        const n3 = parseInt(nota3.value);
-
-        if (!n1 || !n2 || !n3) {
-            validation(n1, n2, n3);
-        } else {
-            notafinish(n1, n2, n3);
-        }
-    }
-
-    function notafinish(n1, n2, n3) {
-        const prome = (n1 + n2 + n3) / 3
-
-        promedio.innerHTML = prome;
-        gapi(prome);
-    }
-
-    function gapi(pro) {
-        ganapierde.classList.remove("text-danger");
-        ganapierde.classList.add("text-success");
-        if (pro < 7) {
-            ganapierde.classList.add("text-danger");
-
-            ganapierde.innerHTML = "No pasaste la materia";
-        } else {
-            ganapierde.innerHTML = "Pasaste la meteria";
-        }
-    }
-</script>
